# nafnaeindraeding-lokaverkefni

./: .gitignore  readme.md
processing/: extract_relations.py  pyproject.toml  readme.md  wikipedia_combine.py
processing/lib/: articles_parser.py  combiner.py  mediawiki_parser.py  props_parser.py  redirect_parser.py  relations.py  utils.py
processing/tests/: test_articles_parser.py  test_combiner.py  test_mediawiki_parser.py  test_props_parser.py  test_redirect_parser.py  test_relations.py
web/: index.html  package-lock.json  package.json  readme.md
web/src/: main.ts  relations.json
