[tool.poetry]
name = "nafnaeinraeding-lokaverkefni"
version = "0.1.0"
description = ""
authors = ["Ólafur Sverrir Kjartansson <kjarni@gmail.com>"]
readme = "README.md"
packages = [{include = "nafnaeinraeding_lokaverkefni"}]

[tool.poetry.dependencies]
python = "^3.10"
mwparserfromhell = "^0.6.4"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.2"
black = "^22.8.0"
pytest = "^7.1.3"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
